[gd_scene load_steps=3 format=3 uid="uid://coygl0j1bj3r3"]

[ext_resource type="Script" path="res://Scripts/pausaMenu.gd" id="1_80myh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ulhwl"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_80myh")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.564706)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -128.5
offset_right = 144.0
offset_bottom = 128.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 19

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Jugar
"

[node name="Opcions" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Opciones
"

[node name="Reset" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Reiniciar"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Salir
"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -94.0
offset_right = 144.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 19

[node name="OptionButton" type="OptionButton" parent="VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
selected = 0
item_count = 4
popup/item_0/text = "Dificultad"
popup/item_0/separator = true
popup/item_1/text = "Facil"
popup/item_1/id = 1
popup/item_2/text = "Medio"
popup/item_2/id = 2
popup/item_3/text = "Dificil"
popup/item_3/id = 3

[node name="CheckButton" type="CheckButton" parent="VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_ulhwl")
button_pressed = true
text = "Musica"

[node name="Atras" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Atras
"
alignment = 0

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Opcions" to="." method="_on_opcions_pressed"]
[connection signal="pressed" from="VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="item_selected" from="VBoxContainer3/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="VBoxContainer3/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="VBoxContainer3/Atras" to="." method="_on_atras_pressed"]
